--- a/packages/experiments/package.json
+++ b/packages/experiments/package.json
@@ -51,6 +51,7 @@
     "@uifabric/foundation": ">=0.1.0 <1.0.0",
     "@uifabric/icons": ">=6.0.2 <7.0.0",
     "deep-assign": "^2.0.0",
+    "lodash": "^4.17.10",
     "office-ui-fabric-react": ">=6.39.0 <7.0.0",
     "tslib": "^1.7.1"
   },
