--- a/packages/experiments/package.json
+++ b/packages/experiments/package.json
@@ -25,6 +25,7 @@
     "@types/enzyme-adapter-react-16": "1.0.1",
     "@types/es6-promise": "0.0.32",
     "@types/jest": "23.0.0",
+    "@types/lodash": "^4.14.113",
     "@types/react": "16.3.16",
     "@types/react-addons-test-utils": "0.14.18",
     "@types/react-dom": "16.0.5",
@@ -52,6 +53,7 @@
     "@uifabric/icons": ">=6.0.2 <7.0.0",
     "deep-assign": "^2.0.0",
     "lodash": "^4.17.10",
+    "moment": "^2.22.2",
     "office-ui-fabric-react": ">=6.39.0 <7.0.0",
     "tslib": "^1.7.1"
   },
